# auto-nut-runner

./: .gitignore  README.md
assistant/: CMakeLists.txt  config.ini
assistant/include/: batch_command.h  dc_gear_motor.h  detail_display.h  encoding_config.h  fetch_config.h  general_setting.h  main_window.h  microstep_config.h  serial_port_config.h  sound_light_alert.h  stepper_ctl.h
assistant/include/common/: hex_text_edit.h  read_config.h  serial_combo_box.h  text_converter.h
assistant/res/: auto_nut_runner.rc
assistant/src/: batch_command.cpp  dc_gear_motor.cpp  detail_display.cpp  encoding_config.cpp  fetch_config.cpp  general_setting.cpp  main.cpp  main_window.cpp  microstep_config.cpp  serial_port_config.cpp  sound_light_alert.cpp  stepper_ctl.cpp
assistant/src/common/: hex_text_edit.cpp  read_config.cpp  serial_combo_box.cpp  text_converter.cpp
equipment/: .mxproject  Makefile  auto_nut_runner.ioc  flash.bat  flash.ps1
equipment/Core/Inc/: active_buzzer.h  buzzer.h  cmd_handler.h  config.h  dm542_motor.h  echo.h  gear_motor.h  led.h  main.h  motor_controller.h  stepper.h  stm32f1xx_it.h
equipment/Core/Src/: active_buzzer.c  buzzer.c  cmd_handler.c  config.c  dm542_motor.c  echo.c  gear_motor.c  led.c  main.c  motor_controller.c  stepper.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
